--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "": "./bin/index.js"
+    "valoran": "./bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "files": [
     "bin",
@@ -24,11 +25,15 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "commander": "^9.0.0"
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "husky": "^7.0.4"
   },
   "dependencies": {
     "axios": "^0.26.1",
     "chalk": "^4.1.2",
+    "commander": "^9.0.0",
     "download-git-repo": "^3.0.2",
     "figlet": "^1.5.0",
     "fs-extra": "^10.0.1",
